force-app/main/default/objects/Deployment_Finding__c/Deployment_Finding__c.object-meta.xml
<CustomObject>
    <description>Stores one deployment assistant finding.</description>
    <label>Deployment Finding</label>
    <nameField>
        <displayFormat>DF-{00000}</displayFormat>
        <label>Deployment Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>