force-app/main/default/objects/Deployment_Finding__c/fields/Assessment_Key__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Key__c</fullName>
    <label>Assessment Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>