force-app/main/default/objects/Deployment_Finding__c/fields/Finding_Type__c.field-meta.xml
<CustomField>
    <fullName>Finding_Type__c</fullName>
    <label>Finding Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>