force-app/main/default/objects/Deployment_Finding__c/fields/Metadata_Key__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Key__c</fullName>
    <label>Metadata Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>